[package]
name = "pi_path_finding"
version = "0.5.5"
authors = ["baip <baip@gmail.com>"]
edition = "2021"
description = "A* Path Finding Algorithm"
repository = "https://github.com/GaiaWorld/pi_path_finding"
license = "MIT OR Apache-2.0"
keywords = ["pi", "PathFinding", "AStar"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pi_null = "0.1"
nalgebra = "0.32"
num-traits = "0.2"
num-derive = "0.3"
bitvec="1.0"
serde = { version = "1.0", features = ["derive"] }

#[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {version="0.2", features=["serde-serialize"]}
serde-wasm-bindgen ="0.5.0"
js-sys = "0.3.4"
bytemuck = { version = "1.4", features = ["derive"] }

[dev-dependencies]
raqote = "0.8"
pcg_rand = "0.13"
rand_core = "0.6"
